--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-  "version": "0.0.21",
+  "name": "arg-vue",
+  "version": "0.0.3",
+  "description": "Arg-Vue utilities",
+  "author": "mergehez <argesozdogan@gmail.com>",
+  "type": "module",
+  "license": "MIT",
+  "homepage": "https://github.com/mergehez/argvue#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mergehez/argvue.git"
+  },
   "files": [
     "lib/*"
   ],
@@ -7,23 +17,18 @@
   "exports": {
     "./Components": {
       "import": "./lib/Components/index.js",
-      "require": "./lib/Components/index.js"
+      "require": "./lib/Components/index.js",
+      "types": "./lib/Components/index.d.ts"
     },
     "./utils": {
       "import": "./lib/utils/index.js",
-      "require": "./lib/utils/index.js"
+      "require": "./lib/utils/index.js",
+      "types": "./lib/utils/index.d.ts"
     },
     "./theme_setup": {
       "import": "./lib/theme_setup.js",
       "require": "./lib/theme_setup.js"
     }
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@mergehez"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mergehez/argvue"
   },
   "scripts": {
     "buildy": "rimraf dist/ && vite build && vue-tsc --emitDeclarationOnly",
@@ -37,11 +42,9 @@
     "serve": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
-    "test": "exit 0"
+    "test": "exit 0",
+    "publishX": "npm publish --access public"
   },
-  "name": "argvue",
-  "private": true,
-  "type": "module",
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
     "@iconify-json/mdi": "^1.1.67",
@@ -78,5 +81,8 @@
   "peerDependencies": {
     "@iconify-json/mdi": "^1.1.67",
     "@iconify/tailwind": "^1.1.2"
+  },
+  "bugs": {
+    "url": "https://github.com/mergehez/argvue/issues"
   }
 }
