--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "mergehez <argesozdogan@gmail.com>",
   "type": "module",
   "license": "MIT",
-  "homepage": "https://github.com/mergehez/argvue#readme",
+  "homepage": "https://github.com/mergehez/arg-vue#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mergehez/argvue.git"
+    "url": "git+https://github.com/mergehez/arg-vue.git"
   },
   "files": [
-    "lib/*"
+    "lib/*",
+    "laravel/*"
   ],
   "types": "./lib/index.d.ts",
   "exports": {
@@ -39,7 +40,7 @@
     }
   },
   "bin": {
-    "argvue-install": "lib/install.mjs"
+    "arg-vue-install": "lib/install.mjs"
   },
   "scripts": {
     "buildy": "rimraf dist/ && vite build && vue-tsc --emitDeclarationOnly",
@@ -72,7 +73,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.6",
     "vue": "^3.4.31",
-    "vue-advanced-cropper": "^2.8.9"
+    "vue-advanced-cropper": "^2.8.9",
+    "ziggy-js": "^2.3.0"
   },
   "devDependencies": {
     "@types/latinize": "^0.2.18",
@@ -95,6 +97,6 @@
     "@iconify/tailwind": "^1.1.2"
   },
   "bugs": {
-    "url": "https://github.com/mergehez/argvue/issues"
+    "url": "https://github.com/mergehez/arg-vue/issues"
   }
 }
