--- a/package.json
+++ b/package.json
@@ -58,43 +58,39 @@
     "publishX": "npm publish --access public"
   },
   "dependencies": {
-    "@fontsource/roboto": "^5.0.14",
+    "@fontsource/roboto": "^5.1.0",
     "@formkit/auto-animate": "^0.8.2",
-    "@iconify-json/mdi": "^1.1.67",
-    "@iconify/tailwind": "^1.1.2",
+    "@iconify/json": "^2.2.253",
+    "@iconify/tailwind": "^1.1.3",
     "@inertiajs/vue3": "^1.2.0",
     "@popperjs/core": "^2.11.8",
-    "@vueuse/components": "^10.11.0",
-    "@vueuse/core": "^10.11.0",
-    "dayjs": "^1.11.12",
+    "@vueuse/components": "^10.11.1",
+    "@vueuse/core": "^10.11.1",
+    "dayjs": "^1.11.13",
     "idb-keyval": "^6.2.1",
     "latinize": "^2.0.0",
     "pinia": "^2.2.2",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss": "^3.4.6",
-    "vue": "^3.4.31",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.13",
+    "vue": "^3.5.10",
     "vue-advanced-cropper": "^2.8.9",
     "ziggy-js": "^2.3.0"
   },
   "devDependencies": {
     "@types/latinize": "^0.2.18",
-    "@types/node": "^20.14.11",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "autoprefixer": "^10.4.19",
+    "@types/node": "^20.16.10",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
     "path": "^0.12.7",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.47",
     "rollup-plugin-typescript2": "^0.36.0",
-    "sass": "^1.77.8",
+    "sass": "^1.79.3",
     "typescript": "^5.6.2",
-    "vite": "^5.3.4",
-    "vite-plugin-dts": "^4.0.3",
-    "vite-plugin-sass-dts": "^1.3.25",
+    "vite": "^5.4.8",
+    "vite-plugin-dts": "^4.2.2",
+    "vite-plugin-sass-dts": "^1.3.29",
     "vite-plugin-static-copy": "^1.0.6",
-    "vue-tsc": "^2.0.24"
-  },
-  "peerDependencies": {
-    "@iconify-json/mdi": "^1.1.67",
-    "@iconify/tailwind": "^1.1.2"
+    "vue-tsc": "^2.1.6"
   },
   "bugs": {
     "url": "https://github.com/mergehez/arg-vue/issues"
