--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arg-vue",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Arg-Vue utilities",
   "author": "mergehez <argesozdogan@gmail.com>",
   "type": "module",
@@ -60,34 +60,34 @@
   "dependencies": {
     "@fontsource/roboto": "^5.1.0",
     "@formkit/auto-animate": "^0.8.2",
-    "@iconify/json": "^2.2.253",
+    "@iconify/json": "^2.2.259",
     "@iconify/tailwind": "^1.1.3",
-    "@inertiajs/vue3": "^1.2.0",
+    "@inertiajs/vue3": "^2.0.0-beta.1",
     "@popperjs/core": "^2.11.8",
     "@vueuse/components": "^10.11.1",
     "@vueuse/core": "^10.11.1",
     "dayjs": "^1.11.13",
     "idb-keyval": "^6.2.1",
     "latinize": "^2.0.0",
-    "pinia": "^2.2.2",
-    "tailwind-merge": "^2.5.2",
+    "pinia": "^2.2.4",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
-    "vue": "^3.5.10",
+    "vue": "^3.5.12",
     "vue-advanced-cropper": "^2.8.9",
     "ziggy-js": "^2.3.0"
   },
   "devDependencies": {
     "@types/latinize": "^0.2.18",
-    "@types/node": "^20.16.10",
+    "@types/node": "^20.16.11",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "path": "^0.12.7",
     "postcss": "^8.4.47",
     "rollup-plugin-typescript2": "^0.36.0",
-    "sass": "^1.79.3",
-    "typescript": "^5.6.2",
+    "sass": "^1.79.5",
+    "typescript": "^5.6.3",
     "vite": "^5.4.8",
-    "vite-plugin-dts": "^4.2.2",
+    "vite-plugin-dts": "^4.2.4",
     "vite-plugin-sass-dts": "^1.3.29",
     "vite-plugin-static-copy": "^1.0.6",
     "vue-tsc": "^2.1.6"
