--- a/package.json
+++ b/package.json
@@ -57,28 +57,29 @@
     "test": "exit 0",
     "publishX": "npm publish --access public"
   },
-  "dependencies": {
+  "dependencies": {},
+  "peerDependencies": {
     "@fontsource/roboto": "^5.1.0",
     "@formkit/auto-animate": "^0.8.2",
-    "@iconify/json": "^2.2.259",
+    "@iconify/json": "^2.2.260",
     "@iconify/tailwind": "^1.1.3",
-    "@inertiajs/vue3": "^2.0.0-beta.1",
+    "@inertiajs/vue3": "^1.2.0",
     "@popperjs/core": "^2.11.8",
-    "@vueuse/components": "^10.11.1",
-    "@vueuse/core": "^10.11.1",
+    "@vueuse/components": "^11.1.0",
+    "@vueuse/core": "^11.1.0",
+    "axios": "^1.7.7",
+    "laravel-vite-plugin": "^1.0.5",
     "dayjs": "^1.11.13",
     "idb-keyval": "^6.2.1",
     "latinize": "^2.0.0",
     "pinia": "^2.2.4",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.13",
     "vue": "^3.5.12",
     "vue-advanced-cropper": "^2.8.9",
-    "ziggy-js": "^2.3.0"
-  },
-  "devDependencies": {
+    "ziggy-js": "^2.3.0",
     "@types/latinize": "^0.2.18",
-    "@types/node": "^20.16.11",
+    "@types/node": "^22.7.5",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "path": "^0.12.7",
@@ -86,10 +87,10 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "sass": "^1.79.5",
     "typescript": "^5.6.3",
-    "vite": "^5.4.8",
+    "vite": "^5.4.9",
     "vite-plugin-dts": "^4.2.4",
     "vite-plugin-sass-dts": "^1.3.29",
-    "vite-plugin-static-copy": "^1.0.6",
+    "vite-plugin-static-copy": "^2.0.0",
     "vue-tsc": "^2.1.6"
   },
   "bugs": {
