--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "postcss-nesting": "^13.0.1",
     "rollup-plugin-typescript2": "^0.36.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
     "vite": "^5.4.9",
     "vite-plugin-dts": "^4.2.4",
@@ -95,6 +95,5 @@
   "bugs": {
     "url": "https://github.com/mergehez/arg-vue/issues"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
