--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "useDefineForClassFields": true,
     "module": "esnext",
     "moduleResolution": "Bundler",
+//    "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "strict": true,
     "jsx": "preserve",
@@ -18,7 +19,8 @@
     "skipLibCheck": true,
     "outDir": "dist",
     "declaration": true,
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+
   },
-  "include": ["lib/**/*", "lib/**/*.vue"]
+  "include": ["lib/**/*", "lib/**/*.vue"],
 }
